# BearGPT

./: .gitignore  pyproject.toml  readme.md
beargpt/: app.py  chat_history.db  config.json.example  migrate_tinydb_to_sqlite.py  pinecone_keepalive.py  pinecone_test.py  rebuild_long_term_memory.py  update_db.py
beargpt/SQL/: 1.sql  2.sql
beargpt/assistant/: chat_history.py  config.py  logger.py  memory.py  open_ai.py  openai.py
beargpt/static/css/: main.css
beargpt/templates/: base.html  index.html
